--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -9,7 +9,6 @@ env:
   
 jobs:
   build:
-    name: Release Android
     runs-on: ubuntu-latest
     permissions: write-all
     
@@ -64,7 +63,9 @@ jobs:
         run: lib/scripts/build.ps1 android
         
       - name: Flutter build apk
-        run: flutter build apk --release --split-per-abi --dart-define-from-file=pili_release.json --pub
+        # run: flutter build apk --release --split-per-abi --dart-define-from-file=pili_release.json --pub
+        # 改为仅编译arm64-v8a架构版本
+        run: flutter build apk --release --target-platform=android-arm64 --dart-define-from-file=pili_release.json --pub
         
       - name: Rename
         run: |
