--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -74,7 +74,7 @@ jobs:
             mv "$file" "PiliPlus_android_${{ env.version }}_${abi}.apk"
           done
           # 配合仅编译arm64-v8a架构版本导致的文件名变化进行的修改
-          # mv "app-release.apk" "PiliPlus_android_${{ env.version }}_${abi}.apk"
+          # mv "build/app/outputs/flutter-apk/app-release.apk" "PiliPlus_android_${{ env.version }}_${abi}.apk"
         shell: bash
         
       - name: Create GitHub Release & Upload APK
