--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -38,9 +38,13 @@ jobs:
         uses: subosito/flutter-action@main
         id: flutter-action
         with:
-          channel: stable
-          flutter-version-file: pubspec.yaml
-          cache: true
+          # channel: stable
+          # flutter-version-file: pubspec.yaml
+          # cache: true
+          # 尝试更激进的版本策略
+          channel: dev
+      - run: flutter --version
+
       
       - name: Apply bottom sheet patch
         working-directory: ${{ env.FLUTTER_ROOT }}
