--- a/.github/workflows/build-termux.yml
+++ b/.github/workflows/build-termux.yml
@@ -9,7 +9,7 @@ on:
         default: 'v0.119.0'
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
     
     env:
@@ -25,25 +25,12 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     steps:
-      - name: Initialization values
-        run: |
-          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          
       - name: Clone termux-app repository
         uses: actions/checkout@main
         with:
           repository: termux/termux-app
           ref: master
           path: ${{ env.SOURCE_DIR }}
-      
-      - name: Validate tag
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-        run: |
-          TAG_NAME="${GITHUB_REF#refs/tags/}"
-          if ! echo "$TAG_NAME" | grep -qP '^v(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$'; then
-            echo "错误: 标签 '$TAG_NAME' 不符合语义化版本规范"
-            exit 1
-          fi
       
       - name: Set up JDK 17
         uses: actions/setup-java@main
@@ -114,8 +101,8 @@ jobs:
           echo "架构: ${{ env.BUILD_ABI }}"
           echo "构建类型: ${{ env.BUILD_TYPE }}"
           
-          # 将密钥库复制到源代码目录
-          cp ../../keystore/release-keystore.p12 ./
+          # 将密钥库从工作空间根目录复制到源代码目录
+          cp ../keystore/release-keystore.p12 ./
           
           # 设置构建变量
           export TERMUX_APP_VERSION_NAME="${{ steps.set_version.outputs.version_without_v }}"
@@ -163,11 +150,11 @@ jobs:
           fi
           
           # 将 APK 复制到工作流根目录以便后续步骤使用
-          mkdir -p ../../release-artifacts
-          cp "$APK_PATH" ../../release-artifacts/
+          mkdir -p ../release-artifacts
+          cp "$APK_PATH" ../release-artifacts/
           
           # 设置输出变量
-          echo "APK_PATH=../../release-artifacts/$(basename "$APK_PATH")" >> $GITHUB_ENV
+          echo "APK_PATH=../release-artifacts/$(basename "$APK_PATH")" >> $GITHUB_ENV
           echo "APK_FILENAME=$(basename "$APK_PATH")" >> $GITHUB_ENV
       
       - name: Generate SHA256 Checksum
@@ -184,8 +171,7 @@ jobs:
         uses: softprops/action-gh-release@master
         with:
           name: Termux ${{ steps.set_version.outputs.version }}
-          tag_name: ${{env.BUILD_DATE}}-termux
-          # tag_name: ${{ steps.set_version.outputs.version }}
+          tag_name: ${{ steps.set_version.outputs.version }}
           draft: false
           prerelease: false
           files: |
@@ -217,5 +203,3 @@ jobs:
             
             ## 变更记录
             ${{ github.event.head_commit.message }}
-
-      
