--- a/.github/workflows/build-termux.yml
+++ b/.github/workflows/build-termux.yml
@@ -1,226 +1,129 @@
 name: build-termux
 
 on:
-  workflow_dispatch:  # 允许手动触发发布
-    inputs:
-      release_version:
-        description: '发布版本号 (例如: v0.118.0)'
-        required: true
-        default: 'v0.119.0'
+  workflow_dispatch:
+  workflow_call:
+  
+env:
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
-    
-    env:
-      PACKAGE_VARIANT: apt-android-7
-      BUILD_ABI: arm64-v8a
-      BUILD_TYPE: release
-      SOURCE_DIR: termux-app-source
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+    # strategy:
+    #   fail-fast: false
     steps:
-      - name: Clone termux-app repository
+      - name: Initialization values
+        run: |
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          
+      - name: Checkout Source repo
         uses: actions/checkout@main
         with:
           repository: termux/termux-app
           ref: master
-          path: ${{ env.SOURCE_DIR }}
-      
-      - name: Set up JDK 11
-        uses: actions/setup-java@main
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      
-      - name: Download and setup Android SDK
-        run: |
-          # 下载支持 JDK 11 的 Android SDK 命令行工具
-          SDK_TOOLS_VERSION="9477386"  # 支持 JDK 11 的版本
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-${SDK_TOOLS_VERSION}_latest.zip
-          unzip -q commandlinetools-linux-${SDK_TOOLS_VERSION}_latest.zip
-          mkdir -p $ANDROID_HOME/cmdline-tools
-          mv cmdline-tools $ANDROID_HOME/cmdline-tools/latest
-          rm commandlinetools-linux-${SDK_TOOLS_VERSION}_latest.zip
           
-          # 设置环境变量
-          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
-          echo "PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
-      
-      - name: Install Android SDK components
-        run: |
-          # 接受许可证
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-          
-          # 安装必要的组件（根据 Termux 项目的要求）
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
-            "platform-tools" \
-            "platforms;android-30" \
-            "build-tools;30.0.3" \
-            "ndk;22.1.7171670" \
-            "cmake;3.18.1"
-          
-          # 验证安装
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list
-      
       - name: Decode Keystore
+        run: |
+          echo ${{ secrets.KEYSTORE_BASE64 }} | base64 -d > keystore.jks
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: |
-          if [ -z "$KEYSTORE_BASE64" ]; then
-            echo "错误: KEYSTORE_BASE64 secret 未设置"
-            exit 1
-          fi
-          
-          mkdir -p ./keystore
-          echo "$KEYSTORE_BASE64" | base64 --decode > ./keystore/release-keystore.p12
-          
-          if [ ! -f "./keystore/release-keystore.p12" ]; then
-            echo "错误: 密钥库文件创建失败"
-            exit 1
-          fi
-          
-          echo "密钥库已成功解码到 ./keystore/release-keystore.p12"
-      
-      - name: Set version from tag or input
-        id: set_version
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            # 手动触发时使用输入版本
-            VERSION="${{ github.event.inputs.release_version }}"
-            echo "使用手动输入的版本: $VERSION"
-          else
-            # 标签触发时使用标签名
-            VERSION="${GITHUB_REF#refs/tags/}"
-            echo "使用标签版本: $VERSION"
-          fi
-          
-          # 移除版本号前的 'v' 前缀（如果需要）
-          VERSION_WITHOUT_V="${VERSION#v}"
-          echo "version_without_v=$VERSION_WITHOUT_V" >> $GITHUB_OUTPUT
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          
-          echo "最终版本: $VERSION_WITHOUT_V"
-      
-      - name: Build and Sign Release APK
-        working-directory: ${{ env.SOURCE_DIR }}
+
+      - name: Build APKs
+        shell: bash {0}
         env:
+          PACKAGE_VARIANT: apt-android-7
+          KEYSTORE_PATH: ${{ github.workspace }}/keystore.jks
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_ALIAS_PASSWORD: ${{ secrets.KEY_ALIAS_PASSWORD }}
         run: |
-          # 验证必要的环境变量
-          if [ -z "$KEYSTORE_PASSWORD" ] || [ -z "$KEY_ALIAS" ] || [ -z "$KEY_ALIAS_PASSWORD" ]; then
-            echo "错误: 签名所需的密钥密码或别名未设置"
-            exit 1
+          exit_on_error() { echo "$1"; exit 1; }
+
+          echo "Setting vars"
+
+          if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
+              GITHUB_SHA="${{ github.event.pull_request.head.sha }}" # Do not use last merge commit set in GITHUB_SHA
           fi
-          
-          echo "正在构建 Release APK..."
-          echo "版本: ${{ steps.set_version.outputs.version_without_v }}"
-          echo "变体: ${{ env.PACKAGE_VARIANT }}"
-          echo "架构: ${{ env.BUILD_ABI }}"
-          echo "构建类型: ${{ env.BUILD_TYPE }}"
-          
-          # 将密钥库从工作空间根目录复制到源代码目录
-          cp ../keystore/release-keystore.p12 ./
-          
-          # 设置构建变量
-          export TERMUX_APP_VERSION_NAME="${{ steps.set_version.outputs.version_without_v }}"
-          export TERMUX_APK_VERSION_TAG="${{ steps.set_version.outputs.version }}-${{ env.PACKAGE_VARIANT }}-github-release"
-          export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}"
-          
-          # 构建 Release 版本
-          ./gradlew assembleRelease \
-            -Pandroid.injected.signing.store.file=./release-keystore.p12 \
-            -Pandroid.injected.signing.store.password="$KEYSTORE_PASSWORD" \
-            -Pandroid.injected.signing.key.alias="$KEY_ALIAS" \
-            -Pandroid.injected.signing.key.password="$KEY_ALIAS_PASSWORD" \
-            -PbuildABI="${{ env.BUILD_ABI }}"
-          
-          echo "构建完成!"
-      
-      - name: Verify APK
-        working-directory: ${{ env.SOURCE_DIR }}
-        run: |
-          RELEASE_DIR="./app/build/outputs/apk/release"
-          APK_PREFIX="termux-app_${{ steps.set_version.outputs.version }}-${{ env.PACKAGE_VARIANT }}-github-release"
-          
-          # 检查 APK 文件是否存在
-          APK_PATH="$RELEASE_DIR/${APK_PREFIX}_${{ env.BUILD_ABI }}.apk"
-          echo "检查 APK 文件: $APK_PATH"
-          
-          if [ ! -f "$APK_PATH" ]; then
-            echo "错误: APK 文件未找到"
-            ls -la "$RELEASE_DIR" || true
-            exit 1
+
+          # Set RELEASE_VERSION_NAME to "<CURRENT_VERSION_NAME>+<last_commit_hash>"
+          CURRENT_VERSION_NAME_REGEX='\s+versionName "([^"]+)"$'
+          CURRENT_VERSION_NAME="$(grep -m 1 -E "$CURRENT_VERSION_NAME_REGEX" ./app/build.gradle | sed -r "s/$CURRENT_VERSION_NAME_REGEX/\1/")"
+          RELEASE_VERSION_NAME="v$CURRENT_VERSION_NAME+${GITHUB_SHA:0:7}" # The "+" is necessary so that versioning precedence is not affected
+          if ! printf "%s" "${RELEASE_VERSION_NAME/v/}" | grep -qP '^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$'; then
+           exit_on_error "The versionName '${RELEASE_VERSION_NAME/v/}' is not a valid version as per semantic version '2.0.0' spec in the format 'major.minor.patch(-prerelease)(+buildmetadata)'. https://semver.org/spec/v2.0.0.html."
           fi
+
+          APK_DIR_PATH="./app/build/outputs/apk/release"
+          APK_VERSION_TAG="$RELEASE_VERSION_NAME-${{ env.PACKAGE_VARIANT }}-github-release" # Note the "-", GITHUB_SHA will already have "+" before it
+          APK_BASENAME_PREFIX="termux-app_$APK_VERSION_TAG"
+
+          # Used by attachment steps later
+          echo "APK_DIR_PATH=$APK_DIR_PATH" >> $GITHUB_ENV
+          echo "APK_VERSION_TAG=$APK_VERSION_TAG" >> $GITHUB_ENV
+          echo "APK_BASENAME_PREFIX=$APK_BASENAME_PREFIX" >> $GITHUB_ENV
+
+          echo "Building APKs for 'APK_VERSION_TAG' build"
+          export TERMUX_APP_VERSION_NAME="${RELEASE_VERSION_NAME/v/}" # Used by app/build.gradle
+          export TERMUX_APK_VERSION_TAG="$APK_VERSION_TAG" # Used by app/build.gradle
+          export TERMUX_PACKAGE_VARIANT="${{ env.PACKAGE_VARIANT }}" # Used by app/build.gradle
           
-          # 显示 APK 信息
-          echo "APK 文件大小: $(du -h "$APK_PATH" | cut -f1)"
+          # Configure signing
+          echo "Configuring release build with signing"
+          cat >> ./app/build.gradle << EOF
+          android {
+              signingConfigs {
+                  release {
+                      storeFile file('${{ env.KEYSTORE_PATH }}')
+                      storePassword '${{ env.KEYSTORE_PASSWORD }}'
+                      keyAlias '${{ env.KEY_ALIAS }}'
+                      keyPassword '${{ env.KEY_ALIAS_PASSWORD }}'
+                  }
+              }
+    
+              buildTypes {
+                  release {
+                      minifyEnabled true
+                      shrinkResources false // Reproducible builds
+                      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+                      signingConfig signingConfigs.release
+                  }
+              }
+          }
+          EOF
           
-          # 验证 APK 签名
-          echo "验证 APK 签名..."
-          if command -v apksigner &> /dev/null; then
-            apksigner verify --verbose "$APK_PATH" || {
-              echo "警告: apksigner 验证失败"
-            }
-          else
-            echo "警告: apksigner 未安装，尝试使用 jarsigner 验证..."
-            jarsigner -verify -verbose "$APK_PATH" || echo "签名验证失败"
+          # Build only arm64-v8a release APK
+          if ! ./gradlew assembleRelease -Pandroid.ndkBuild.abiFilters=arm64-v8a; then
+            exit_on_error "Build failed for '$APK_VERSION_TAG' build."
           fi
-          
-          # 将 APK 复制到工作流根目录以便后续步骤使用
-          mkdir -p ../release-artifacts
-          cp "$APK_PATH" ../release-artifacts/
-          
-          # 设置输出变量
-          echo "APK_PATH=../release-artifacts/$(basename "$APK_PATH")" >> $GITHUB_ENV
-          echo "APK_FILENAME=$(basename "$APK_PATH")" >> $GITHUB_ENV
-      
-      - name: Generate SHA256 Checksum
-        run: |
-          CHECKSUM_FILE="./release-artifacts/checksums.sha256"
-          echo "生成 SHA256 校验和..."
-          
-          sha256sum "${{ env.APK_PATH }}" > "$CHECKSUM_FILE"
-          cat "$CHECKSUM_FILE"
-          
-          echo "CHECKSUM_FILE=$CHECKSUM_FILE" >> $GITHUB_ENV
-      
-      - name: Create GitHub Release
+
+          echo "Validating APKs"
+          if ! test -f "$APK_DIR_PATH/${APK_BASENAME_PREFIX}_arm64-v8a.apk"; then
+            files_found="$(ls "$APK_DIR_PATH")"
+            exit_on_error "Failed to find built APK at '$APK_DIR_PATH/${APK_BASENAME_PREFIX}_arm64-v8a.apk'. Files found: "$'\n'"$files_found"
+          fi
+
+          echo "Generating sha256sums file"
+          if ! (cd "$APK_DIR_PATH"; sha256sum \
+            "${APK_BASENAME_PREFIX}_arm64-v8a.apk" \
+            > "${APK_BASENAME_PREFIX}_sha256sums"); then
+            exit_on_error "Generate sha256sums failed for '$APK_VERSION_TAG' release."
+          fi
+
+      - name: Attach arm64-v8a APK file
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.APK_BASENAME_PREFIX }}_arm64-v8a
+          path: |
+            ${{ env.APK_DIR_PATH }}/${{ env.APK_BASENAME_PREFIX }}_arm64-v8a.apk
+            ${{ env.APK_DIR_PATH }}/output-metadata.json
+
+      - name: Create GitHub Release & Upload APK
         uses: softprops/action-gh-release@master
         with:
-          name: Termux ${{ steps.set_version.outputs.version }}
-          tag_name: ${{ steps.set_version.outputs.version }}
+          tag_name: ${{env.BUILD_DATE}}-termux
+          files: |
+            ${{ env.APK_DIR_PATH }}/${{ env.APK_BASENAME_PREFIX }}_arm64-v8a.apk
+            ${{ env.APK_DIR_PATH }}/output-metadata.json
           draft: false
           prerelease: false
-          files: |
-            ${{ env.APK_PATH }}
-            ${{ env.CHECKSUM_FILE }}
-          body: |
-            # Termux ${{ steps.set_version.outputs.version }}
-            
-            ## 发布信息
-            - **版本**: ${{ steps.set_version.outputs.version }}
-            - **变体**: ${{ env.PACKAGE_VARIANT }}
-            - **架构**: ${{ env.BUILD_ABI }}
-            - **构建类型**: ${{ env.BUILD_TYPE }}
-            - **源代码**: termux/termux-app 的 master 分支
-            
-            ## 安装说明
-            1. 下载 APK 文件
-            2. 验证 SHA256 校验和
-            3. 在 Android 设备上安装
-            
-            ## 校验和
-            ```
-            $(cat ${{ env.CHECKSUM_FILE }})
-            ```
-            
-            ## 注意事项
-            - 此版本仅支持 arm64-v8a 架构设备
-            - 安装前请确保已卸载旧版本
-            
-            ## 变更记录
-            ${{ github.event.head_commit.message }}
