--- a/.github/workflows/build-xed-editor.yml
+++ b/.github/workflows/build-xed-editor.yml
@@ -55,7 +55,9 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: Build with Gradle for ARM64
-        run: ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a && mv app/build/outputs/apk/release/*.apk app/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
+        run: |
+          ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
+          mv app/build/outputs/apk/release/*.apk app/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
         env:
           KEYSTORE_FILE: /tmp/xed.keystore
           SIGNING_PROPERTIES_FILE: /tmp/signing.properties
@@ -71,4 +73,8 @@ jobs:
           prerelease: false
 		  
       - name: Delete secrets
-        run: rm /tmp/xed.keystore /tmp/signing.properties
+        if: always()
+        run: rm -f /tmp/xed.keystore /tmp/signing.properties
+
+
+
