--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Add keystore and build.json from secrets
         run: |
-          echo "${{ secrets.KEYSTORE_CONTENT }}" | base64 -d > ${{ env.STORE_FILE_PATH }}
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ${{ env.STORE_FILE_PATH }}
           echo "${{ secrets.ACODE_BUILD_JSON_CONTENT }}" | base64 -d > ${{ env.BUILD_JSON_PATH }}
           echo "Keystore and build.json added successfully."
 
