--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -111,9 +111,21 @@ jobs:
           }
           EOF
           echo "build.json created for release signing"
-          # 显示 build.json（隐藏敏感信息）
+          # 使用更安全的方法显示 build.json（隐藏密码）
           echo "Build.json content (passwords hidden):"
-          cat ${{ env.BUILD_JSON_PATH }} | sed "s/${{ secrets.KEYSTORE_PASSWORD }}/***/g" | sed "s/${{ secrets.KEY_ALIAS_PASSWORD }}/***/g"
+          python3 -c "
+import json
+with open('${{ env.BUILD_JSON_PATH }}', 'r') as f:
+    data = json.load(f)
+if 'android' in data:
+    if 'debug' in data['android']:
+        data['android']['debug']['storePassword'] = '***'
+        data['android']['debug']['password'] = '***'
+    if 'release' in data['android']:
+        data['android']['release']['storePassword'] = '***'
+        data['android']['release']['password'] = '***'
+print(json.dumps(data, indent=2))
+          "
 
       - name: Run npm build paid release apk
         run: |
@@ -127,6 +139,18 @@ jobs:
           cp platforms/android/app/build/outputs/apk/debug/app-debug.apk /tmp/app-release-normal.apk
           echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
 
+      - name: Run npm build paid release apk fdroid (for F-Droid)
+        run: |
+          node utils/storage_manager.mjs y
+          # 对于 F-Droid 构建，可能不需要签名
+          # 创建一个不包含签名的 build.json
+          echo '{}' > ${{ env.BUILD_JSON_PATH }}
+          npm run build paid release apk fdroid
+          # 检查生成的 APK 文件
+          find platforms/android -name "*.apk" -type f | xargs ls -la
+          cp platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk || \
+          cp platforms/android/app/build/outputs/apk/debug/app-debug.apk /tmp/app-release-fdroid.apk
+
       - name: Remove keystore and build.json
         run: |
           rm -f ${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}
@@ -139,5 +163,6 @@ jobs:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
             /tmp/app-release-normal.apk
+            /tmp/app-release-fdroid.apk
           draft: false
           prerelease: false
