--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -103,10 +103,10 @@ jobs:
           cd platforms/android
           ./gradlew assembleRelease
           # 检查APK文件是否存在
-          if [ -f app/build/outputs/apk/release/app-stable.apk ]; then
-            mv app/build/outputs/apk/release/app-stable.apk /tmp/acode-release-normal.apk
-          elif [ -f app/build/outputs/apk/app-stable.apk ]; then
-            mv app/build/outputs/apk/app-stable.apk /tmp/acode-release-normal.apk
+          if [ -f app/build/outputs/apk/release/*.apk ]; then
+            mv app/build/outputs/apk/release/*.apk /tmp/acode-release-normal.apk
+          elif [ -f app/build/outputs/apk/*.apk ]; then
+            mv app/build/outputs/apk/*.apk /tmp/acode-release-normal.apk
           else
             echo "Error: Release APK not found in expected locations!"
             ls -la app/build/outputs/apk/
