--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -33,12 +33,20 @@ jobs:
           repository: Acode-Foundation/Acode
           ref: main
 
-      - name: Replace build-extras.gradle with release configuration
+      - name: Fix build-extras.gradle for release build
         run: |
+          # 替换为正确语法的 build-extras.gradle
           cat > build-extras.gradle << 'EOF'
           android {
+              compileSdkVersion 35
               packagingOptions {
                   pickFirst 'META-INF/versions/9/OSGI-INF/MANIFEST.MF'
+              }
+              buildTypes {
+                  release {
+                      minifyEnabled false
+                      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+                  }
               }
           }
           configurations {
@@ -50,14 +58,7 @@ jobs:
                 exclude group: 'org.bouncycastle', module: 'bcprov-jdk18on'
             }
           }
-          buildTypes {
-              release {
-                  minifyEnabled false
-                  proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-              }
-          }
           EOF
-          echo "Replaced build-extras.gradle with release configuration"
 
       - name: Set up Java 21
         uses: actions/setup-java@main
