--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -125,7 +125,7 @@ jobs:
         run: |
           node utils/storage_manager.mjs y
           # 确保使用release构建
-          npm run build paid release apk -- --release
+          npm run build paid release apk
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew assembleRelease
@@ -141,24 +141,24 @@ jobs:
           fi
           echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
            
-      - name: Run npm build paid release apk fdroid (for F-Droid)
-        run: |
-          node utils/storage_manager.mjs y
-          # 确保使用release构建
-          npm run build paid release apk fdroid -- --release
-          # 显式调用Gradle release构建
-          cd platforms/android
-          ./gradlew assembleRelease
-          # 检查APK文件是否存在
-          if [ -f app/build/outputs/apk/release/app-fdroid.apk ]; then
-            mv app/build/outputs/apk/release/app-fdroid.apk /tmp/acode-release-fdroid.apk
-          elif [ -f app/build/outputs/apk/app-fdroid.apk ]; then
-            mv app/build/outputs/apk/app-fdroid.apk /tmp/acode-release-fdroid.apk
-          else
-            echo "Error: Release APK not found in expected locations!"
-            ls -la app/build/outputs/apk/
-            exit 1
-          fi
+      # - name: Run npm build paid release apk fdroid (for F-Droid)
+      #   run: |
+      #     node utils/storage_manager.mjs y
+      #     # 确保使用release构建
+      #     npm run build paid release apk fdroid -- --release
+      #     # 显式调用Gradle release构建
+      #     cd platforms/android
+      #     ./gradlew assembleRelease
+      #     # 检查APK文件是否存在
+      #     if [ -f app/build/outputs/apk/release/app-fdroid.apk ]; then
+      #       mv app/build/outputs/apk/release/app-fdroid.apk /tmp/acode-release-fdroid.apk
+      #     elif [ -f app/build/outputs/apk/app-fdroid.apk ]; then
+      #       mv app/build/outputs/apk/app-fdroid.apk /tmp/acode-release-fdroid.apk
+      #     else
+      #       echo "Error: Release APK not found in expected locations!"
+      #       ls -la app/build/outputs/apk/
+      #       exit 1
+      #     fi
       
       - name: Remove keystore and build.json
         run: |
@@ -170,7 +170,7 @@ jobs:
         run: |
           echo "Prepared release assets for GitHub release"
           echo "NORMAL_APK_PATH=/tmp/acode-release-normal.apk" >> $GITHUB_OUTPUT
-          echo "FDROID_APK_PATH=/tmp/acode-release-fdroid.apk" >> $GITHUB_OUTPUT
+          # echo "FDROID_APK_PATH=/tmp/acode-release-fdroid.apk" >> $GITHUB_OUTPUT
       
       - name: Create GitHub release with APK
         id: release_normal
@@ -179,6 +179,6 @@ jobs:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
             /tmp/acode-release-normal.apk
-            /tmp/acode-release-fdroid.apk
+            # /tmp/acode-release-fdroid.apk
           draft: false
           prerelease: false
