--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -2,6 +2,7 @@ name: build-acode
 
 on:
   workflow_dispatch:
+  workflow_call:
 
 permissions:
   contents: write
@@ -17,10 +18,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Source repo
-        uses: actions/checkout@v4
+      - name: Checkout source repo
+        uses: actions/checkout@main
         with:
           fetch-depth: 0
           repository: Acode-Foundation/Acode
@@ -31,7 +31,7 @@ jobs:
           # 先获取当前commit信息
           echo "GIT_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || git rev-list --max-parents=0 HEAD)" >> $GITHUB_ENV
-          echo "BUILD_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
       - name: Fix build-extras.gradle for release build
         run: |
@@ -59,20 +59,20 @@ jobs:
           }
           EOF
 
-      - name: Set up Java 21
-        uses: actions/setup-java@v4
+      - name: Set up jdk 21
+        uses: actions/setup-java@main
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up node.js
+        uses: actions/setup-node@main
         with:
           node-version: 'lts/*'
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Set up android sdk
+        uses: android-actions/setup-android@main
 
       - name: Add keystore and build.json from secrets
         run: |
@@ -99,7 +99,7 @@ jobs:
           echo "Extracted Version Code: $VERSION_CODE"
           echo "Extracted Version: $VERSION"
 
-      - name: Append Commit Hash to Version and Update config.xml
+      - name: Append commit hash to version and update config.xml
         id: update-version
         run: |
           # 确保GIT_COMMIT不为空
@@ -120,21 +120,21 @@ jobs:
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_ENV
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Install Node.js Packages
+      - name: Install node.js packages
         run: npm install
 
-      - name: Install Cordova CLI
+      - name: Install cordova cli
         run: npm install -g cordova
 
       - name: Run npm setup
         run: npm run setup
 
-      - name: Run npm build paid release apk
+      - name: Run npm build paid apk
         run: |
           node utils/storage_manager.mjs y
           npm run build paid apk
           
-      - name: Build Release APK with Gradle
+      - name: Build release apk files with Gradle
         run: |
           cd platforms/android
           ./gradlew clean
@@ -205,8 +205,8 @@ jobs:
           rm -f "${{ env.STORE_FILE_PATH }}" "${{ env.BUILD_JSON_PATH }}"
           echo "Keystore and build.json removed successfully."
       
-      - name: Create GitHub release with apk
-        uses: softprops/action-gh-release@v1
+      - name: Create github release & upload apk
+        uses: softprops/action-gh-release@master
         with:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
