--- a/.github/workflows/build-media3-ffmpeg-decoder.yml
+++ b/.github/workflows/build-media3-ffmpeg-decoder.yml
@@ -44,19 +44,16 @@ on:
  
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
- 
     steps:
-
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@main
  
       - name: Initialization values
         run: |
-          echo "BV_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          echo "BV_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-      - name: Setup JDK 21
+      - name: Set up jdk 21
         uses: actions/setup-java@main
         with:
           java-version: '21'
@@ -122,7 +119,7 @@ jobs:
       #       media/libraries/decoder_ffmpeg/buildout/outputs/aar/*
       #     compression-level: 9
           
-      - name: Create GitHub release
+      - name: Create github release
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{env.BV_DATE}}-ffmpeglib
