--- a/.github/workflows/build-xed-editor.yml
+++ b/.github/workflows/build-xed-editor.yml
@@ -2,15 +2,15 @@ name: build-xed-editor
 
 on:
   workflow_dispatch:
+  workflow_call:
 
 jobs:
-  build-release:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
-      - name: Checkout Source repo
+      - name: Checkout source repo
         uses: actions/checkout@main
         with:
           repository: Xed-Editor/Xed-Editor
@@ -18,16 +18,16 @@ jobs:
 
       - name: Initialization values
         run: |
-          echo "BUILD_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-      - name: Set up JDK 21
+      - name: Set up jdk 21
         uses: actions/setup-java@main
         with:
           java-version: "21"
           distribution: "temurin"
           cache: gradle
           
-      - name: Cache Gradle Build Files
+      - name: Cache gradle build files
         uses: actions/cache@main
         with:
           path: |
@@ -50,24 +50,25 @@ jobs:
       - name: Clone submodules
         run: git submodule update --init --recursive
 
-      - name: Set Commit Hash
+      - name: Set commit hash
         id: commit_hash
         run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: Build with Gradle for ARM64
+      - name: Build release apk files
         run: |
           ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
           mkdir -p release-apks
-          mv app/build/outputs/apk/release/*.apk release-apks/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
+          # mv app/build/outputs/apk/release/*.apk release-apks/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
+          mv app/build/outputs/apk/release/*.apk release-apks/xed-editor-${{env.BUILD_DATE}}.apk
         env:
           KEYSTORE_FILE: /tmp/xed.keystore
           SIGNING_PROPERTIES_FILE: /tmp/signing.properties
 
-      - name: Create GitHub Release & Upload APK
+      - name: Create github release & upload apk
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{env.BUILD_DATE}}-xed-editor
-          files: release-apks/xed-editor-${{ env.COMMIT_HASH }}-arm64-v8a.apk
+          files: release-apks/xed-editor-${{env.BUILD_DATE}}.apk
           draft: false
           prerelease: false
           
